# dbboard

./: .env.example  .gitattributes  .gitignore  .pii-denylist.example  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  clippy.toml  deny.toml
.cargo/: config.toml
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
.claude/: next-actions.md  project-status.md
.claude/issues/: 0001-web-contract-mirror.md  0002-web-capabilities-mirror.md  0003-web-history-schema-mirror.md  0004-runtime-locale-switcher.md  0005-dbboard-ai-trait-and-anthropic-provider.md  0006-web-aurora-dsql-no-mirror.md  0007-web-ai-phase6-no-contract-mirror.md  0008-ai-provider-settings-ui-and-persistence.md  0008-web-history-v2-mirror.md  0009-ai-streaming-cancel-tokens.md  0010-ai-history-v2.md  0011-ddl-extraction.md  0012-right-click-quick-sql-autorun.md  0013-inline-cell-editing-with-explicit-save.md  0014-light-dark-auto-theme.md  0015-adopt-app-icon-as-official-logo.md  0016-structure-tab-render-refactor.md  README.md
.claude/verification/: adr-0049-backup.md
.github/workflows/: pages.yml  pii-scan.yml  release.yml
apps/dbboard/: Cargo.toml  build.rs
apps/dbboard/src/: main.rs  update_check.rs
apps/dbboard/wix/: License.rtf  main.wxs
crates/dbboard-ai/: Cargo.toml
crates/dbboard-ai/src/: capabilities.rs  error.rs  lib.rs  provider.rs  request.rs  stream.rs
crates/dbboard-anthropic/: Cargo.toml  README.md
crates/dbboard-anthropic/src/: lib.rs  stream.rs
crates/dbboard-anthropic/tests/: messages_roundtrip.rs  streaming_roundtrip.rs
crates/dbboard-config/: Cargo.toml
crates/dbboard-config/src/: admin.rs  ai_settings.rs  ai_store.rs  annotations.rs  bundle.rs  error.rs  lib.rs  secrets.rs  secure_fs.rs  store.rs  ui_settings.rs
crates/dbboard-config/tests/: collector_template.rs  secrets.rs  storage.rs
crates/dbboard-connect/: Cargo.toml
crates/dbboard-connect/src/: backend.rs  config.rs  lib.rs
crates/dbboard-core/: Cargo.toml
crates/dbboard-core/src/: adapter.rs  error.rs  lib.rs  limits.rs  read_only.rs  row.rs  schema.rs  sort.rs  value.rs  write_back.rs
crates/dbboard-core/src/capabilities/: auth.rs  functions.rs  mod.rs  realtime.rs  storage.rs  views.rs
crates/dbboard-core/src/dump/: insert.rs  literal.rs  mod.rs  plan.rs  run.rs  select.rs
crates/dbboard-core/src/restore/: mod.rs  plan.rs  run.rs  split.rs
crates/dbboard-d1/: Cargo.toml
crates/dbboard-d1/src/: lib.rs
crates/dbboard-d1/tests/: rest_roundtrip.rs
crates/dbboard-i18n/: Cargo.toml  i18n.toml
crates/dbboard-i18n/i18n/de/: dbboard-i18n.ftl
crates/dbboard-i18n/i18n/en/: dbboard-i18n.ftl
crates/dbboard-i18n/i18n/es/: dbboard-i18n.ftl
crates/dbboard-i18n/i18n/fr/: dbboard-i18n.ftl
crates/dbboard-i18n/i18n/it/: dbboard-i18n.ftl
crates/dbboard-i18n/i18n/ja/: dbboard-i18n.ftl
crates/dbboard-i18n/i18n/ko/: dbboard-i18n.ftl
crates/dbboard-i18n/i18n/pt-BR/: dbboard-i18n.ftl
crates/dbboard-i18n/i18n/ru/: dbboard-i18n.ftl
crates/dbboard-i18n/i18n/zh-CN/: dbboard-i18n.ftl
crates/dbboard-i18n/i18n/zh-TW/: dbboard-i18n.ftl
crates/dbboard-i18n/src/: lib.rs
crates/dbboard-mcp/: Cargo.toml  README.md
crates/dbboard-mcp/src/: lib.rs  main.rs  server.rs  service.rs
crates/dbboard-openai/: Cargo.toml
crates/dbboard-openai/src/: lib.rs  stream.rs
crates/dbboard-openai/tests/: completions_roundtrip.rs  streaming_roundtrip.rs
crates/dbboard-postgres/: Cargo.toml  README.md
crates/dbboard-postgres/src/: dsql_auth.rs  lib.rs  table_ddl.rs
crates/dbboard-postgres/tests/: pg_roundtrip.rs
crates/dbboard-server/: Cargo.toml
crates/dbboard-server/src/: backend.rs  config.rs  dto.rs  handlers.rs  lib.rs
crates/dbboard-server/tests/: http.rs
crates/dbboard-turso/: Cargo.toml
crates/dbboard-turso/src/: lib.rs
crates/dbboard-turso/tests/: in_memory.rs
crates/dbboard-ui/: Cargo.toml
crates/dbboard-ui/examples/: emit_history_fixture.rs
crates/dbboard-ui/src/: ai.rs  ai_settings.rs  backup.rs  client.rs  connections.rs  edit.rs  errors.rs  export.rs  history.rs  lib.rs  restore.rs  selection.rs  theme.rs  worker.rs
docs/: api-contract.md  architecture.md  compatibility.md  connections.md  decisions.md  internal-testing.md  roadmap.md
docs/collector-setup/: README.md  connections.template.toml
docs/maintainer/: history-sanitize-runbook.md  internal-distribution.md  pii-scanning.md
scripts/: pii-scan.allow  pii-scan.sh
site/: app.js  index.html
