[package]
name = "dbboard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "dbboard desktop binary: wires adapters and UI together."

[[bin]]
name = "dbboard"
path = "src/main.rs"

[dependencies]
# The binary wires the in-process server to the UI and links neither
# adapters nor dbboard-core directly: the server owns backend selection
# (the adapters reach the binary transitively through dbboard-server).
# dbboard-config is only needed here for the load-or-empty entry point
# and the keyring secret backend; resolution itself lives in the server.
dbboard-config = { workspace = true }
# Translation loader (ADR-0015). The binary is the only crate that
# resolves the user's locale (env var → OS → en fallback) and registers
# CJK system fonts. `dbboard-ui` itself only sees the macros.
dbboard-i18n = { workspace = true }
dbboard-server = { path = "../../crates/dbboard-server" }
dbboard-ui = { path = "../../crates/dbboard-ui" }
# Optional AI provider trait + the first concrete provider (ADR-0023).
# The binary resolves `DBBOARD_ANTHROPIC_API_KEY` at startup, constructs
# an `AnthropicProvider` on success, and injects it into the UI as
# `Option<Arc<dyn AiProvider>>`. A missing env var or a construction
# failure degrades gracefully — the binary still runs without AI.
dbboard-ai = { workspace = true }
dbboard-anthropic = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
tokio = { workspace = true }
# ADR-0017 history.jsonl stamps RFC 3339 ms-precision timestamps. The
# binary owns the clock so `dbboard-ui` stays free of any date crate;
# `formatting` is the only feature needed for OffsetDateTime → RFC 3339.
time = { version = "0.3", default-features = false, features = ["formatting", "std"] }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[lints]
workspace = true
