[package]
name = "dbboard-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "AI provider trait crate for dbboard (ADR-0023). No I/O; concrete providers live in sibling crates."

[dependencies]
# Re-exports `TableInfo` so `SuggestRequest::schema` does not redefine
# the type (ADR-0023 Decision 7). `dbboard-core` is the only workspace
# dependency this crate has, mirroring `dbboard-core`'s own "no
# workspace deps" stance one layer up.
dbboard-core = { workspace = true }
# Same object-safety story as `DatabaseAdapter`: AFIT does not work
# behind `dyn Trait` yet, so `async-trait` desugars to
# `Pin<Box<dyn Future>>` and we can hold `Arc<dyn AiProvider>`.
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
# ADR-0026 (streaming + cancel + token meter): the `AiStream` alias is
# `futures_util::stream::BoxStream<'static, _>`, and the default impls
# on `AiProvider::stream_*` use `futures_util::stream::iter` to wrap a
# single-shot atomic response into a 3-event stream.
futures-util = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
# The provider trait's async methods are exercised behind
# `Arc<dyn AiProvider>` in unit tests; `tokio::test` provides the
# minimal runtime needed for those `.await` calls without forcing a
# runtime dependency on this trait crate.
tokio = { workspace = true }

[lints]
workspace = true
