[package]
name = "dbboard-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Anthropic Messages API provider for dbboard's AI layer (ADR-0023)."

[dependencies]
# Trait crate. Concrete providers depend on dbboard-ai only — never on
# dbboard-core directly (it is re-exported through dbboard-ai for
# `TableInfo`), never on dbboard-ui (ADR-0023 Decision 1).
dbboard-ai = { workspace = true }
# `async-trait` desugars the `AiProvider` async methods to
# `Pin<Box<dyn Future>>` so the trait is object-safe (same story as
# `DatabaseAdapter`).
async-trait = { workspace = true }
# HTTPS client. The workspace dep pins rustls so TLS stays pure-Rust
# and the Windows build remains self-contained (matches dbboard-d1).
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# ADR-0026 Decision 4: SSE streaming on the Messages API uses
# reqwest-eventsource for the EventSource wrapper + explicit
# RetryPolicy::Never (token-billed POSTs must not silently retry).
reqwest-eventsource = "0.6"
# Underlying Stream trait for the AiStream return type. futures-util
# is already a workspace dep (sqlx fetch_many path).
futures-util = { workspace = true }

[dev-dependencies]
# Drives the async `AiProvider` calls under `#[tokio::test]`.
tokio = { workspace = true }
# Pure-Rust mock HTTP server. Lets the round-trip tests exercise the
# Messages API surface without hitting the live Anthropic endpoint and
# without requiring a `DBBOARD_ANTHROPIC_API_KEY`.
wiremock = { workspace = true }

[lints]
workspace = true
