[package]
name = "dbboard-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Local TOML connection store and OS keychain backed secrets for dbboard (ADR-0013)."

[dependencies]
directories = { workspace = true }
keyring = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
