[package]
name = "dbboard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Domain layer for dbboard: adapter trait, value types, and errors."

[dependencies]
thiserror = "2"

[lints]
workspace = true
