[package]
name = "dbboard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Domain layer for dbboard: adapter trait, value types, and errors."

[dependencies]
thiserror = { workspace = true }
# Serde is always on: these domain types cross the loopback HTTP wire
# (ADR-0009). Serialization is pure data transformation, so the
# crate's "no I/O" rule still holds.
serde = { workspace = true }
# JSON has no byte type; Value::Blob is encoded as base64.
base64 = { workspace = true }
# Object-safe async trait until AFIT supports dyn (ADR-0012). The macro
# is compile-time only — defining an async trait is not I/O, so the
# crate's "no I/O" rule still holds.
async-trait = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
# `#[tokio::test]` for exercising async trait default impls
# (`describe_table`, ADR-0028). Dev-only — the crate still does no I/O.
tokio = { workspace = true }

[lints]
workspace = true
