[package]
name = "dbboard-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "PostgreSQL-wire adapter for dbboard (CockroachDB, Neon, ...) over sqlx."

[dependencies]
dbboard-core = { workspace = true }
sqlx = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
